fixed carousel images that were jumping by adding max width and height

--- a/app/assets/stylesheets/components/_indexx.scss
+++ b/app/assets/stylesheets/components/_indexx.scss
@@ -70,3 +70,9 @@
    border-radius: 10px;
     overflow: hidden;
  }
+
+.carousel-inner {
+  min-width: 100px;
+  max-width: 400px;
+  max-height: 300px;
+}
